feat: add goal transactions and holdings endpoints with pagination support
Signed-off-by: kabi175 <kabilan.mee@gmail.com>